--- a/DiplomFrontendReact/package.json
+++ b/DiplomFrontendReact/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "cors": "^2.8.5",
     "http-proxy-middleware": "^2.0.4",
     "jest-editor-support": "^30.0.2",
     "pg": "^8.7.3",
