--- a/DiplomFrontendReact/package.json
+++ b/DiplomFrontendReact/package.json
@@ -6,6 +6,7 @@
     "@ant-design/icons": "^4.7.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@microsoft/signalr": "^6.0.4",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.2",
     "@mui/x-date-pickers": "^5.0.0-alpha.1",
