--- a/DiplomBackendASPNet/appsettings.json
+++ b/DiplomBackendASPNet/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SocialNetworkCon": "Server=localhost;Database=postgres;Port=5432;Ssl Mode=allow;User Id=postgres;Password=20001508"
+    "SocialNetworkCon": "Server=localhost;Database=postgres;Port=5432;Ssl Mode=allow;User Id=postgres;Password="
   },
   "Logging": {
     "LogLevel": {
