--- a/DiplomFrontendReact/package.json
+++ b/DiplomFrontendReact/package.json
@@ -9,6 +9,7 @@
     "@microsoft/signalr": "^6.0.4",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.2",
+    "@mui/x-charts": "^7.3.0",
     "@mui/x-date-pickers": "^5.0.0-alpha.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
